--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -1,25 +1,35 @@
 [id="Preparing_the_migration_environment"]
-= Preparing the migration environment
+= Preparing the environment for migration
 
-Preparing the environment for migration involves the following key steps:
+Preparing the environment involves the following key steps:
 
-. xref:Preparing_the_vmware_source_environment[]
-. Configuring the target storage and networks, installing software, and adding providers to CloudForms in the target environment:
+. xref:Preparing_the_vmware_source_environment[Preparing the source environment] by extending the source network to the target environment and checking the source virtual machines for anything that might interfere with the migration process
+
+. Configuring the target environment by setting up networks and storage, installing software, and adding the providers to CloudForms:
 
 * xref:Preparing_the_rhv_target_environment[]
 * xref:Preparing_the_osp_target_environment[]
 
-. xref:Configuring_conversion_hosts_for_transformation[]
-+
-You can xref:Configuring_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for conversion hosts or providers for better performance and control of the migration process.
+. Configuring the conversion hosts to use VDDK or SSH:
+
+* xref:Configuring_rhv_hosts[]
+* xref:Configuring_osp_hosts[]
+
+. Optionally, xref:Configuring_the_maximum_number_of_concurrent_migrations[changing the maximum number of concurrent migrations] for conversion hosts or providers for better performance and control of the migration process
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 
 [id="Preparing_the_target_environment"]
 == Preparing the target environment
 
+Prepare the target environment:
+
+* xref:Preparing_the_rhv_target_environment[]
+* xref:Preparing_the_osp_target_environment[]
+
 include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+2]
 include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+2]
-include::assembly_Conversion_hosts.adoc[leveloffset=+2]
-include::modules/proc_Upgrading_conversion_hosts.adoc[leveloffset=+2]
-include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+2]
+
+include::assembly_Conversion_hosts.adoc[leveloffset=+1]
+include::modules/proc_Upgrading_conversion_hosts.adoc[leveloffset=+1]
+include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
