--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -1,9 +1,9 @@
 [id="Preparing_the_vmware_source_environment"]
 = Preparing the source environment
 
-Prepare the source environment's network and virtual machines for migration.
+Prepare the source environment for migration.
 
-.Preparing the source network
+.Network
 
 * Extend the VMware network to the target environment.
 
@@ -14,7 +14,7 @@ The network configuration must not be changed in any way during the migration.
 Ensure that IP addresses, VLANs, and other network configurations are not changed before or after migration, because the conversion process preserves the source virtual machine MAC addresses.
 ====
 
-.Preparing the source virtual machines
+.Virtual machines
 
 . Unmount mounted ISO/CDROM disks.
 
