--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Upgrading_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Upgrading_conversion_hosts.adoc
@@ -1,7 +1,10 @@
 [id="Upgrading_conversion_hosts"]
-= Upgrading conversion hosts
+= Upgrading the conversion hosts
 
-* To upgrade Red Hat Virtualization conversion hosts, enter the following commands on the Manager machine:
+* Red Hat Virtualization:
++
+. Connect to the Manager using SSH.
+. Update the packages and copy the latest `virt-v2v-wrapper` to `/user/bin/`:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -9,4 +12,4 @@
 # cp /usr/share/ansible/roles/oVirt.ovirt-ansible-v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
 ----
 
-* To upgrade OpenStack Platform conversion hosts, download the latest conversion appliance and create new conversion hosts.
+* OpenStack Platform: xref:Deploying_osp_conversion_hosts[Download the latest conversion appliance and deploy new conversion hosts].
