Added smartstate analysis

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
@@ -12,12 +12,18 @@ Preparing the environment for migration involves the following key steps:
 
 . xref:Configuring_the_conversion_hosts[] in CloudForms
 +
-You can xref:Changing_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for conversion hosts or providers for better performance and control of the migration process.
+.  xref:Changing_the_maximum_number_of_concurrent_migrations[(Optional) Changing the maximum number of concurrent migrations] for conversion hosts or providers for better performance and control of the migration process
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 
 [id="Preparing_the_target_environment"]
 == Preparing the target environment
+
+Prepare your target environment for migration:
+
+** xref:Preparing_the_rhv_target_environment[]
+** xref:Preparing_the_osp_target_environment[]
+
 include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+2]
 include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+2]
 
