--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
@@ -1,8 +1,7 @@
 // Module included in the following assemblies:
 // proc_Preparing_the_rhv_target_environment.adoc
 // proc_Preparing_the_osp_target_environment.adoc
-
-. Check that your software versions are compatible:
+* Check that your software versions are compatible:
 +
 .Software compatibility matrix
 [cols="2,1,1,1", options="header"]
