--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -2,11 +2,13 @@
 [id="Preparing_the_osp_target_environment"]
 = Preparing the Red Hat OpenStack Platform environment
 
-.Procedure
+.Prerequisites
 
 include::ref_Software_compatibility_requirements.adoc[]
+* Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations.
+* Disable the C1E halt state, if applicable.
 
-. Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations, and disable the C1E halt state, if applicable.
+.Configuring OpenStack Platform
 
 . Install Red Hat OpenStack Platform 13 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/director_installation_and_usage/[Red Hat OpenStack Platform Director Installation and Usage]).
 
@@ -16,7 +18,7 @@ include::ref_Software_compatibility_requirements.adoc[]
 
 . Ensure that the `admin` user has `member` and `admin` roles in the conversion and destination projects (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/users_and_identity_management_guide/#edit_a_project[Edit a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
 
-. Set at least one `volume type` for the target block storage (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/storage_guide/#section-create-volume[Create a Volume] and link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/storage_guide/#section-volume-retype[Changing a Volume’s Type (Volume Re-typing)] in the _Red Hat OpenStack Platform Storage Guide_). Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
+. Set at least one volume type for the target block storage (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/storage_guide/#section-create-volume[Create a Volume] and link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/storage_guide/#section-volume-retype[Changing a Volume’s Type (Volume Re-typing)] in the _Red Hat OpenStack Platform Storage Guide_). Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
 
 . Ensure that the storage backends have sufficient space for the migrated virtual machines.
 
@@ -32,6 +34,8 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 
 . Create flavors for the source virtual machines. If you do not create custom flavors, CloudForms will map each source virtual machine to an existing flavor.
 
+.Configuring CloudForms
+
 . Install Red Hat CloudForms 4.7 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Installing Red Hat CloudForms on Red Hat OpenStack Platform]).
 
 . Add VMware and OpenStack Platform as providers in CloudForms (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[Adding an OpenStack Infrastructure Provider] in _Red Hat CloudForms: Managing Providers_).
@@ -43,9 +47,15 @@ Do not remove or change a provider before, during, or after migration because th
 
 . Ensure that the OpenStack Platform user (default is `cloud-user`) in CloudForms has `admin` privileges for the target projects.
 
-. Deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Deciding_how_many_conversion_hosts_to_create[] for details.
+. Enable *SmartState Analysis* in CloudForms:
+
+.. In the header bar, click menu:Administrator[Configuration].
+.. In the left pane, in *Settings*, click menu:CFME Regions[Zones > Server] and select *Server: EVM [1] (current)*.
+.. In the right pane, in the *Server* tab, set *SmartState Analysis* to *On* and click *Save*.
 
 .Deploying OpenStack Platform conversion host instances[[Deploying_osp_conversion_hosts]]
+
+You deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Deciding_how_many_conversion_hosts_to_create[] for details.
 
 . Navigate to link:https://access.redhat.com/downloads/[].
 . In the *A-Z* tab, click *Red Hat OpenStack Platform*.
