--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -5,8 +5,10 @@
 .Procedure
 
 include::ref_Software_compatibility_requirements.adoc[]
+* Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations.
+* Disable the C1E halt state, if applicable.
 
-. Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations, and disable the C1E halt state, if applicable.
+.Configuring Red Hat Virtualization
 
 . Install Red Hat Virtualization Manager on the Manager machine (see link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.3/html-single/installation_guide/#part-Installing_the_Red_Hat_Virtualization_Manager[Installing the Red Hat Virtualization Manager] in the _Red Hat Virtualization Installation Guide_).
 
@@ -29,6 +31,8 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 
 . Upload the VirtIO and Guest Tool image files to the ISO storage domain (see link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.3/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[Uploading the VirtIO and Guest Tool Image Files to an ISO Storage Domain] in the _Red Hat Virtualization Administration Guide_). The VirtIO file name must include the version number: +virtio-win-_version_.iso+. The Guest Tool is required for migrating Windows virtual machines.
 
+.Configuring CloudForms
+
 . Install Red Hat CloudForms 4.7 on the Manager machine (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/installing_red_hat_cloudforms_on_red_hat_virtualization[Installing Red Hat CloudForms on Red Hat Virtualization]).
 
 . Add VMware and Red Hat Virtualization as providers in CloudForms (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] and https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_a_red_hat_virtualization_provider[Adding a Red Hat Virtualization Provider] in _Red Hat CloudForms: Managing Providers_).
@@ -37,5 +41,11 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 ====
 Do not remove or change a provider (including refreshing RHV hosts) before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
 ====
+
+. Enable *SmartState Analysis* in CloudForms:
+
+.. In the header bar, click menu:Administrator[Configuration].
+.. In the left pane, in *Settings*, click menu:CFME Regions[Zones > Server] and select *Server: EVM [1] (current)*.
+.. In the right pane, in the *Server* tab, set *SmartState Analysis* to *On* and click *Save*.
 
 You are ready to xref:Configuring_the_conversion_hosts[configure the conversion hosts] in CloudForms.
