--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
@@ -10,8 +10,7 @@
 // Attributes
 include::common/attributes/ims.adoc[]
 
-:cfme:
-
+:ims:
 :numbered:
 
 include::doc/assembly_Infrastructure_migration_solution_overview.adoc[leveloffset=+1]
