--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -32,30 +32,30 @@ include::ref_Software_compatibility_requirements.adoc[]
 Outbound traffic is enabled by default. If you have changed this setting, enable ports 902 (CloudForms to VMware) and 5480 (`virt-v2v` to vCenter).
 ====
 
-. Create flavors for the source virtual machines. If you do not create custom flavors, CloudForms will map each source virtual machine to an existing flavor.
+. Create flavors for the source virtual machines. If you do not create custom flavors, CloudForms will try to map each source virtual machine to an existing flavor.
 
 .Configuring CloudForms
 
-. Install Red Hat CloudForms 4.7 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Installing Red Hat CloudForms on Red Hat OpenStack Platform]).
+. Install Red Hat CloudForms 4.7 (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Installing Red Hat CloudForms on Red Hat OpenStack Platform]).
 
-. Add VMware and OpenStack Platform as providers in CloudForms (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[Adding an OpenStack Infrastructure Provider] in _Red Hat CloudForms: Managing Providers_).
+. Add VMware and OpenStack Platform as providers (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[Adding an OpenStack Infrastructure Provider] in _Red Hat CloudForms Managing Providers_).
 +
 [NOTE]
 ====
 Do not remove or change a provider before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
 ====
 
-. Ensure that the OpenStack Platform user (default is `cloud-user`) in CloudForms has `admin` privileges for the target projects.
+. Ensure that the OpenStack Platform user (default is `cloud-user`) has `admin` privileges for the target projects.
 
-. Enable *SmartState Analysis* in CloudForms:
+. Enable SmartState Analysis:
 
 .. In the header bar, click menu:Administrator[Configuration].
-.. In the left pane, in *Settings*, click menu:CFME Regions[Zones > Server] and select *Server: EVM [1] (current)*.
+.. In the left pane, in *Settings*, click menu:CFME Regions[Zones > Server] and select select the CloudForms machine.
 .. In the right pane, in the *Server* tab, set *SmartState Analysis* to *On* and click *Save*.
 
 .Deploying OpenStack Platform conversion host instances[[Deploying_osp_conversion_hosts]]
 
-You deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Deciding_how_many_conversion_hosts_to_create[] for details.
+The conversion host instances are deployed using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Deciding_how_many_conversion_hosts_to_create[] for details.
 
 . Navigate to link:https://access.redhat.com/downloads/[].
 . In the *A-Z* tab, click *Red Hat OpenStack Platform*.
@@ -76,9 +76,12 @@ Always download the latest version of the OpenStack Platform conversion applianc
 ** `/var/tmp` (1 GB for each conversion)
 ** `/var/logs` (5 GB)
 +
+[NOTE]
+====
 For optimal performance:
 
 * Deploy the conversion hosts on more than one hypervisor.
 * Deploy the conversion hosts on a compute node with nested virtualization enabled. See link:https://docs.openstack.org/devstack/latest/guides/devstack-with-nested-kvm.html[]. Nested virtualization is a technology preview.
+====
 
 You are ready to xref:Configuring_the_conversion_hosts[configure the conversion hosts] in CloudForms.
